@@ -1,6 +1,7 @@
 2.16.0
  - enh: color feature data in QuickView combobox according to availability
  - enh: hide basinmap features in scatter plot selections (#159)
+ - ref: reduce usage of `dclab.dfn.scalar_feature_names` (#108)
  - setup: bump dclab to 0.58.0
 2.15.5
  - fix: right-click menu not working for plot widgets (#160)
